--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
     
+    <h2>Top 2 Recipes</h2>
+    
+    <ol>
+        <li><a href="./recipes/lasagna.html" rel="nooppener norefferer">Lasagna</a></li>
+    </ol>
 </body>
 </html>
