--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <body>
     <h1>Odin Recipes</h1>
     
-    <h2>Top 2 Recipes</h2>
+    <h2>Top 3 Recipes</h2>
     
     <ol>
         <li><a href="./recipes/lasagna.html" rel="nooppener norefferer">Lasagna</a></li>
+        <li><a href="./recipes/mac-and-cheese.html" rel="nooppener norefferer">Mac and Cheese</a></li>
+        <li><a href="./recipes/christmas-martini.html" rel="nooppener norefferer">Christmas Martini Recipe</a></li>
     </ol>
 </body>
 </html>
