--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -37,6 +37,6 @@
         <li>That's enough</li>
     </ol>
 
-    <a href="../index.html">Homepage</a>
+    <a href="../index.html" rel="nooppener norefferer">Homepage</a>
 </body>
 </html>
