--- a/recipes/christmas-martini.html
+++ b/recipes/christmas-martini.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Christmas Martini Recipe</h1>
+
+    <img src="../images/christmas-martini.jpg" alt="Christmas Martini" height="310" width="310">
     
     <p>Imagine drinking a Christmas cake – this martini is how it would taste. With bourbon
        <br>and cherry brandy, plus a dried fruit syrup, it's an indulgent festive drink.</p>
