--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Lasagna Recipe of The Ages</h1>
 
-    <img src="../images/lasagna.jpg" alt="Lasagna">
+    <img src="../images/lasagna.jpg" alt="Lasagna" height="310" width="310">
 
     <p>This classic lasagna recipe is made with an easy meat sauce as the base.
     <br>Layer the sauce with noodles and cheese, then bake until bubbly!
