--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Mac and Cheese Recipe</h1>
 
+    <img src="../images/mac-and-cheese.jpg" alt="Mac and Cheese">
+
     <p>This perfect baked macaroni cheese recipe comes with a creamy cheese sauce, a
         <br>hint of mustard and uses leftover french stick for its crunchy topping.</p>
 
